--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
   <body>
     <div id="container">
       <div class="div-buscar">
-        <input type="text" id="txt-buscar" />
+        <h2>Buscador de Gifs</h2>
+        <input
+          type="text"
+          id="txt-buscar"
+          placeholder="Escriba el Gif que desea buscar"
+        />
         <button type="button" id="btn-buscar">Buscar</button>
       </div>
-      <div class="mostrar-gif"></div>
+      <div id="mostrar-gif"></div>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
