an input is added

--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
           id="txt-buscar"
           placeholder="Escriba el Gif que desea buscar"
         />
+        <input
+          type="number"
+          id="txt-cantidad"
+          placeholder="Ingrese la cantidad deseada"
+          min="3"
+        />
         <button type="button" id="btn-buscar">Buscar</button>
       </div>
-      <div id="mostrar-gif"></div>
+      <div class="div-img" id="mostrar-gif"></div>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
