css style is added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="container">
       <div class="div-buscar">
-        <h2>Buscador de Gifs</h2>
+        <h2>🌎​Buscador de Gifs🔍​</h2>
         <input
           type="text"
           id="txt-buscar"
